--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,8 @@ add_executable(${PROJECT_NAME}
   src/driveapi.c
   src/savefile.c
   src/timehandler.c
+  src/logger.c
+  src/savedata.c
   ./common/debugScreen.c
 )
 
@@ -72,11 +74,13 @@ target_link_libraries(${PROJECT_NAME}
   SceLibKernel_stub # this line is only for demonstration. It's not needed as
                     # the most common stubs are automatically included.
   SceDisplay_stub   # This used by debugScreenPrintf()
+  SceAppMgr_stub
   ScePaf_stub
   SceNet_stub
   SceNetCtl_stub
   SceHttp_stub
   SceSsl_stub
+  SceAppUtil_stub
   ${CURL_LIBRARIES}
   ${OPENSSL_LIBRARIES}
   SceKernelThreadMgr_stub
