feat(savedata): wip game selector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ set(VITA_APP_NAME "PS Vita Sync")
 # unique string of developer and Y = a unique number for this app
 set(VITA_TITLEID "SYNC00055")
 # Optional version string to show in LiveArea's more info screen
-set(VITA_VERSION "0.2.0")
+set(VITA_VERSION "00.02")
 
 ## Flags and includes for building
 # Note that we make sure not to overwrite previous flags
@@ -66,6 +66,7 @@ add_executable(${PROJECT_NAME}
   src/timehandler.c
   src/logger.c
   src/savedata.c
+  src/appgame.c
   ./common/debugScreen.c
 )
 
@@ -81,6 +82,7 @@ target_link_libraries(${PROJECT_NAME}
   SceHttp_stub
   SceSsl_stub
   SceAppUtil_stub
+  SceCtrl_stub
   ${CURL_LIBRARIES}
   ${OPENSSL_LIBRARIES}
   SceKernelThreadMgr_stub
@@ -107,4 +109,5 @@ vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
   FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
   FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
   FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
+  FILE descript.ion descript.ion
 )
